--- a/innovation-hub.html
+++ b/innovation-hub.html
@@ -3261,6 +3261,27 @@
 
             <!-- Desktop Navigation -->
             <div class="desktop-nav">
+                <!-- Find the desktop-nav section and add this as the FIRST nav-item -->
+<div class="desktop-nav">
+    <!-- ADD THIS NEW ITEM FIRST -->
+    <div class="nav-item">
+        <a href="index.html" class="nav-link">
+            <i class="fas fa-home" aria-hidden="true"></i>
+            <span class="lang-en active">Home</span>
+            <span class="lang-es hidden">Inicio</span>
+        </a>
+    </div>
+    
+    <!-- Existing items follow... -->
+    <div class="nav-item">
+        <a href="#clinical-context" class="nav-link">
+            <i class="fas fa-heartbeat" aria-hidden="true"></i>
+            <span class="lang-en">Disease Focus</span>
+            <span class="lang-es hidden">Enfermedades</span>
+        </a>
+    </div>
+    <!-- ... rest stays same -->
+</div>
                 <div class="nav-item">
                     <a href="#clinical-context" class="nav-link">
                         <i class="fas fa-heartbeat" aria-hidden="true"></i>
