--- a/innovation-hub.html
+++ b/innovation-hub.html
@@ -3362,6 +3362,13 @@
         <div class="mobile-nav" id="mobileNav" role="menu" aria-label="Mobile navigation">
             <ul class="mobile-nav-links">
                 <li class="mobile-nav-item">
+        <a href="index.html" class="mobile-nav-link" onclick="closeMobileMenu()" role="menuitem">
+            <i class="fas fa-home" aria-hidden="true"></i>
+            <span class="lang-en">Home</span>
+            <span class="lang-es hidden">Inicio</span>
+        </a>
+    </li>
+                <li class="mobile-nav-item">
                     <a href="#clinical-context" class="mobile-nav-link" onclick="closeMobileMenu()" role="menuitem">
                         <i class="fas fa-heartbeat" aria-hidden="true"></i>
                         <span class="lang-en">Disease Focus</span>
