--- a/clinical-research.html
+++ b/clinical-research.html
@@ -1139,6 +1139,13 @@
             <!-- Desktop Navigation -->
             <div class="desktop-nav">
                 <div class="nav-item">
+        <a href="index.html" class="nav-link">
+            <i class="fas fa-home"></i>
+            <span class="lang-en">Home</span>
+            <span class="lang-es hidden">Inicio</span>
+        </a>
+    </div>
+                <div class="nav-item">
                     <a href="#research-groups" class="nav-link active">
                         <i class="fas fa-users"></i>
                         <span class="lang-en">Research Groups</span>
@@ -1186,6 +1193,13 @@
         <!-- Mobile Navigation -->
         <div class="mobile-nav" id="mobileNav">
             <ul class="mobile-nav-links">
+                 <li class="mobile-nav-item">
+        <a href="index.html" class="mobile-nav-link" onclick="closeMobileMenu()">
+            <i class="fas fa-home"></i>
+            <span class="lang-en">Home</span>
+            <span class="lang-es hidden">Inicio</span>
+        </a>
+    </li>
                 <li class="mobile-nav-item">
                     <a href="#research-groups" class="mobile-nav-link" onclick="closeMobileMenu()">
                         <i class="fas fa-users"></i>
