--- a/index.html
+++ b/index.html
@@ -1819,7 +1819,7 @@
                         <span lang="en">Visit Clinical Research</span>
                         <span lang="es">Visitar Investigación Clínica</span>
                     </a>
-                </div>
+                </div> <!-- ← FIXED: Added missing closing div -->
             </div>
         </div>
     </section>
