--- a/index.html
+++ b/index.html
@@ -1676,7 +1676,7 @@
         </div>
     </section>
 
-    <!-- Gateway Section -->
+        <!-- Gateway Section -->
     <section class="section gateway-section" id="gateway">
         <div class="container">
             <div class="text-center mb-4">
@@ -1819,8 +1819,8 @@
                         <span lang="en">Visit Clinical Research</span>
                         <span lang="es">Visitar Investigación Clínica</span>
                     </a>
-                </div> <!-- ← FIXED: Added missing closing div -->
-            </div>
+                </div>
+            </div> <!-- ← FIXED: Added missing closing div for .gateway-grid -->
         </div>
     </section>
 
