--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
     
     <style>
         /* ===== PROFESSIONAL LANDING PAGE DESIGN ===== */
+        /* TEMPORARY DEBUG */
+body * {
+    display: block !important;
+    opacity: 1 !important;
+    visibility: visible !important;
+    color: black !important;
+    background: yellow !important;
+    border: 1px solid red !important;
+}
         :root {
             /* Modern Professional Medical Palette */
             --medical-navy: #2C3E50;
